# jaylink

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: main.yml
examples/: blink.rs  jtag_scan.rs  list.rs  pic32.rs  swdump.rs  swodump.rs
src/: bits.rs  capabilities.rs  error.rs  interface.rs  lib.rs  macros.rs  readme.rs
